Updated to match the latest valve translations
Also fine-tuned the BlockSetHats function generation to
not touch sets that don't even have an attribute... this
doesnt help much in the end because stripping the hat does
not remove the set attributes :(
Maybe UnlockBlock's method can be used for that some day.

--- a/translations/de/weapons.phrases.tf.txt
+++ b/translations/de/weapons.phrases.tf.txt
@@ -342,7 +342,7 @@
 	}
 	"TF_SOLEMNVOW"
 	{
-		"de"	"The Eidliche Gelübde"
+		"de"	"Das Eidliche Gelübde"
 	}
 	"TF_LIBERTYLAUNCHER"
 	{
@@ -354,7 +354,7 @@
 	}
 	"TF_MARKETGARDENER"
 	{
-		"de"	"Der Gemüsebauer"
+		"de"	"Der Market Gardener"
 	}
 	"TF_SAXXY"
 	{
