--- a/translations/ru/weapons.phrases.tf.txt
+++ b/translations/ru/weapons.phrases.tf.txt
@@ -138,7 +138,7 @@
 	}
 	"TF_UNIQUE_ENERGYDRINK_CRITCOLA"
 	{
-		"ru"	"Крито-кола"
+		"ru"	"Критокола"
 	}
 	"TF_UNIQUE_GOLDEN_WRENCH"
 	{
@@ -400,6 +400,10 @@
 	{
 		"ru"	"Трехрунный меч"
 	}
+	"TF_MAILBOX"
+	{
+		"ru"	"Почтовый дебошир"
+	}
 	"TF_ENFORCER"
 	{
 		"ru"	"Принудитель"
@@ -411,5 +415,9 @@
 	"TF_RFAHAMMER"
 	{
 		"ru"	"Молот"
+	}
+	"TF_NINEIRON"
+	{
+		"ru"	"Железная девятка Несси"
 	}
 }
