--- a/translations/zho/weapons.phrases.tf.txt
+++ b/translations/zho/weapons.phrases.tf.txt
@@ -400,6 +400,10 @@
 	{
 		"zho"	"盧恩古刃"
 	}
+	"TF_MAILBOX"
+	{
+		"zho"	"掛號專員"
+	}
 	"TF_ENFORCER"
 	{
 		"zho"	"脅威使"
@@ -411,5 +415,9 @@
 	"TF_RFAHAMMER"
 	{
 		"zho"	"巨型釘錘"
+	}
+	"TF_NINEIRON"
+	{
+		"zho"	"尼斯九號鐵桿"
 	}
 }
