--- a/translations/ru/weapons.phrases.tf.txt
+++ b/translations/ru/weapons.phrases.tf.txt
@@ -66,7 +66,7 @@
 	}
 	"TF_UNIQUE_ACHIEVEMENT_CLOAKWATCH"
 	{
-		"ru"	"Невидимый кинжал"
+		"ru"	"Плащ и кинжал"
 	}
 	"TF_UNIQUE_ACHIEVEMENT_REVOLVER"
 	{
@@ -375,6 +375,10 @@
 	"TF_SPACECHEM_FISHCAKE"
 	{
 		"ru"	"Рыбный батончик"
+	}
+	"TF_RIGHTEOUSBISON"
+	{
+		"ru"	"Благочестивый бизон"
 	}
 	"TF_MANTREADS"
 	{
